# model/user_wallets.js
@@ -2,7 +2,7 @@ const Sequelize = require("sequelize");
 
 module.exports = function (sequelize, DataTypes) {
   return sequelize.define(
-    "contest_teams",
+    "user_wallets",
     {
       id: {
         autoIncrement: true,
@@ -10,30 +10,19 @@ module.exports = function (sequelize, DataTypes) {
         allowNull: true,
         primaryKey: true,
       },
-      match_id: {
-        type: DataTypes.INTEGER,
-        allowNull: true,
-      },
-      contest_id: {
-        type: DataTypes.INTEGER,
-        allowNull: true,
-      },
-      contest_fee: {
-        type: DataTypes.INTEGER,
-        allowNull: true,
-      },
       user_id: {
         type: DataTypes.INTEGER,
         allowNull: true,
       },
-      selected_team:{
-        type:DataTypes.TEXT(),
-        allowNull:true
+      amount: {
+        type: DataTypes.INTEGER,
+        allowNull: true,
+        default:0
       }
     },
     {
       sequelize,
-      tableName: "contest_teams",
+      tableName: "user_wallets",
     }
   );
 };
